--- a/sass/components/forms/_input-fields.scss
+++ b/sass/components/forms/_input-fields.scss
@@ -123,6 +123,18 @@ textarea.materialize-textarea {
 
 // Styling for input field wrapper
 .input-field {
+  // Gutter spacing
+  &.col {
+    label {
+      left: $gutter-width / 2;
+    }
+
+    .prefix ~ label,
+    .prefix ~ .validate ~ label {
+      width: calc(100% - 3rem - #{$gutter-width});
+    }
+  }
+
   position: relative;
   margin-top: 1rem;
 
@@ -130,7 +142,6 @@ textarea.materialize-textarea {
     color: $input-border-color;
     position: absolute;
     top: 0.8rem;
-    left: $gutter-width / 2;
     font-size: 1rem;
     cursor: text;
     transition: .2s ease-out;
@@ -152,7 +163,9 @@ textarea.materialize-textarea {
   }
 
   .prefix ~ input,
-  .prefix ~ textarea {
+  .prefix ~ textarea,
+  .prefix ~ label,
+  .prefix ~ .validate ~ label {
     margin-left: 3rem;
     width: 92%;
     width: calc(100% - 3rem);
